# VulkanSC-pcutil

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  golden_results.txt  make.bat  pcinfo.cpp  pcreader.hpp  pcwriter.hpp  pipeline.cpp  runTests.py
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_build.yml
LICENSES/: MIT.txt
cmake/Modules/: ImportVulkanEcosystemComponent.cmake  VulkanSCPcJsonDyndepScanner.cmake  VulkanSCPccDiscovery.cmake  VulkanSCPccUtilities.cmake
docs/: PccDiscovery.md
fake/: vulkan_sc_core.hpp
fake/vulkan/: vulkan_sc_core.hpp
include/vulkan/pcjson/: pipeline_json.h  vkjson_data_default.h  vkjson_parser_default.h  vksc_pipeline_json.h  vulkan_json_data.hpp  vulkan_json_gen.h  vulkan_json_parser.hpp
include/vulkan/pcutil/: pcreader.hpp  pcwriter.hpp
json/: vk.json  vksc_pipeline_schema.json
layers/json_gen/: CMakeLists.txt  README.md  VkLayer_json_gen.def  VkLayer_json_gen.json.in  VkLayer_khronos_json_gen.def  VkLayer_khronos_json_gen.json.in  VkSCLayer_json_gen.def  VkSCLayer_json_gen.json.in  allocator.cpp  allocator.h  atomic_max.hpp  json_gen.cpp  log.h  md5.hpp  vk_alloc.h  vk_common.h  vk_json_layer.cpp  vk_json_layer.hpp  vk_json_layer_platform.cpp  vk_layer_table.cpp  vk_layer_table.h  vk_util.h  vulkan_json_layer.hpp  vulkan_json_layer_data.hpp
scripts/: CMakeLists.txt  common_codegen.py  generate_source.py  json_c_generator.py  json_gen_generator.py  json_generator.py  json_parser.py  json_test_generator.py  known_good.json  pcutil_genvk.py  schema_generator.py  update_deps.py
scripts/generators/: generator_utils.py  json_gen_generator.py  json_parse_generator.py  json_schema_generator.py  json_test_generator.py
tests/: CMakeLists.txt  json_struct_helpers.h  json_validator.cpp  json_validator.h
tests/integration/: CMakeLists.txt  test.cpp
tests/json/: CMakeLists.txt  json_test.cpp  json_validator.cpp  json_validator.h
tests/json/data/: compute_pipeline_0.json  compute_pipeline_1.json  compute_pipeline_2.json  compute_pipeline_3.json  compute_w_arbitrary_names.json  cube.pc.json  graphics_pipeline_0.json  graphics_pipeline_0_fixed.json  graphics_pipeline_1.json  graphics_pipeline_2.json  graphics_pipeline_3.json
tests/json_gen/: CMakeLists.txt  cube.cpp  cube.hpp  gltest_activation.cpp  gltest_json.cpp  gltest_objres.cpp  gltest_uuid.cpp  json_gen_layer_test_json.cpp  json_gen_layer_test_objres.cpp  json_gen_layer_test_uuid.cpp  linmath.h  logo.ppm.h  saxpy.comp.inc  saxpy.cpp  saxpy.hpp  vkresult_gtest_adapter.hpp
tests/pcjson/: CMakeLists.txt  pcjson_test_gen.cpp  pcjson_test_parse.cpp  pjtest_gen.cpp  pjtest_parse.cpp
tests/pcutil/: CMakeLists.txt  object_type_string_helper.h  pctest_readerwriter.cpp  pctest_writer_helper.cpp  pctest_writer_helper.h  pctest_writerdevice.cpp  pcutil_test.cpp  pcutil_test_readerwriter.cpp  pcutil_test_writer_helper.cpp  pcutil_test_writer_helper.h  pcutil_test_writerdevice.cpp  sample_pipeline.h
tests/vkscpcinfo/: CMakeLists.txt
vkscpcctool/: CMakeLists.txt  vkscpcctool.cpp
vkscpcinfo/: CMakeLists.txt  vkscpcinfo.cpp
